# shefostycoon

./: PORTABLE_BUILD.txt  README.md  Tycoon.py  build.py  build_portable.bat  build_portable.sh  pyproject.toml  shefos_save.enc  shefostycoon.spec
.github/workflows/: build.yml
