[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shefostycoon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
build-exe = [
    "pyinstaller>=6.0",
]

[project.scripts]
shefostycoon = "Tycoon:main"

[tool.hatch.build.targets.wheel]
only-include = ["Tycoon.py"]
